fixed the program
